--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="eventos.js"></script>
 </head>
 <body>
-    <button type="button"> Saludar </button>
+    <div>
+        <button onclick="alert('Hola!')"> Saludar </button> 
+    </div>
 </body>
 </html>
