--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Taller de eventos</title>
     <script src="eventos.js"></script>
 </head>
 <body>
-    <div>
+    <div id="div1" style="padding: 5px; background-color: green;">
         <button onclick="alert('Hola!')"> Saludar </button> 
     </div>
 </body>
