--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="div1" style="padding: 5px; background-color: green;">
-        <button onclick="alert('Hola!')"> Saludar </button> 
+        <button id="miBoton"> Saludar </button> 
     </div>
 </body>
 </html>
